--- a/fresh.html
+++ b/fresh.html
@@ -160,6 +160,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            min-height: 160px;
+            /* Ensures consistent height on mobile */
         }
 
         .plan-card.active {
@@ -172,9 +174,10 @@
             background-color: var(--green);
             color: white;
             font-weight: bold;
-            padding: 0.75rem;
+            padding: 0.75rem 1rem;
             border-radius: 0.75rem;
             transition: background-color 0.2s;
+            font-size: 0.95rem;
         }
 
         .plan-select-btn:hover {
@@ -184,6 +187,7 @@
         .plan-card.active .plan-select-btn {
             background-color: white;
             color: var(--green);
+            border: 2px solid var(--green);
         }
 
         .qty-input {
@@ -221,6 +225,46 @@
 
         .hidden {
             display: none;
+        }
+
+        /* Mobile-specific improvements */
+        @media (max-width: 767px) {
+            .page-section {
+                padding: 1.5rem 1rem;
+            }
+
+            .mode-btn {
+                font-size: 0.875rem;
+                padding: 0.75rem 1rem;
+            }
+
+            .plan-card {
+                padding: 1.25rem 1rem;
+                min-height: 180px;
+            }
+
+            .plan-select-btn {
+                padding: 0.875rem 1rem;
+                font-size: 1rem;
+            }
+
+            #email-wrapper {
+                margin-top: 2rem;
+                padding: 0 0.5rem;
+            }
+
+            .mt-12 {
+                margin-top: 2.5rem !important;
+            }
+
+            #total-display {
+                font-size: 1.5rem;
+            }
+
+            #checkout-btn {
+                padding: 1.25rem;
+                font-size: 1.125rem;
+            }
         }
     </style>
 </head>
@@ -275,12 +319,12 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
                         <div class="space-y-4">
                             <h2 class="text-xl font-bold border-b pb-2 text-center">Weekly</h2>
-                            <div class="grid grid-cols-2 md:grid-cols-1 gap-3">
+                            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-1 gap-4">
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1SdSS9B03V57KY6P1w2mylJ5', '$20.00/wk')">
-                                    <div class="font-bold text-sm md:text-base">1-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(250g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$20/wk</div>
+                                    <div class="font-bold text-base">1-Variety</div>
+                                    <div class="text-sm text-gray-500">(250g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$20/wk</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1SdSS9B03V57KY6P1w2mylJ5', '$20.00/wk')">
                                         Choose Plan
@@ -288,9 +332,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1SdSO7B03V57KY6P6OiZkgvF', '$25.00/wk')">
-                                    <div class="font-bold text-sm md:text-base">2-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(500g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$25/wk</div>
+                                    <div class="font-bold text-base">2-Variety</div>
+                                    <div class="text-sm text-gray-500">(500g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$25/wk</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1SdSO7B03V57KY6P6OiZkgvF', '$25.00/wk')">
                                         Choose Plan
@@ -298,9 +342,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1SdSXkB03V57KY6PnfAUocFz', '$35.00/wk')">
-                                    <div class="font-bold text-sm md:text-base">3-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(750g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$35/wk</div>
+                                    <div class="font-bold text-base">3-Variety</div>
+                                    <div class="text-sm text-gray-500">(750g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$35/wk</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1SdSXkB03V57KY6PnfAUocFz', '$35.00/wk')">
                                         Choose Plan
@@ -308,9 +352,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3JZB03V57KY6PUl9AnG95', '$45.00/wk')">
-                                    <div class="font-bold text-sm md:text-base">4-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(1kg)</div>
-                                    <div class="mt-1 font-bold text-green-700">$45/wk</div>
+                                    <div class="font-bold text-base">4-Variety</div>
+                                    <div class="text-sm text-gray-500">(1kg)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$45/wk</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3JZB03V57KY6PUl9AnG95', '$45.00/wk')">
                                         Choose Plan
@@ -320,12 +364,12 @@
                         </div>
                         <div class="space-y-4">
                             <h2 class="text-xl font-bold border-b pb-2 text-center">Fortnightly</h2>
-                            <div class="grid grid-cols-2 md:grid-cols-1 gap-3">
+                            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-1 gap-4">
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3awB03V57KY6PCX55FRHv', '$22.00/fn')">
-                                    <div class="font-bold text-sm md:text-base">1-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(250g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$22/fn</div>
+                                    <div class="font-bold text-base">1-Variety</div>
+                                    <div class="text-sm text-gray-500">(250g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$22/fn</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3awB03V57KY6PCX55FRHv', '$22.00/fn')">
                                         Choose Plan
@@ -333,9 +377,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3YxB03V57KY6PoNoaBiRn', '$27.00/fn')">
-                                    <div class="font-bold text-sm md:text-base">2-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(500g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$27/fn</div>
+                                    <div class="font-bold text-base">2-Variety</div>
+                                    <div class="text-sm text-gray-500">(500g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$27/fn</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3YxB03V57KY6PoNoaBiRn', '$27.00/fn')">
                                         Choose Plan
@@ -343,9 +387,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3edB03V57KY6PenA9ZByZ', '$32.00/fn')">
-                                    <div class="font-bold text-sm md:text-base">3-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(750g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$32/fn</div>
+                                    <div class="font-bold text-base">3-Variety</div>
+                                    <div class="text-sm text-gray-500">(750g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$32/fn</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3edB03V57KY6PenA9ZByZ', '$32.00/fn')">
                                         Choose Plan
@@ -353,9 +397,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3VZB03V57KY6PxDUrEFNg', '$40.00/fn')">
-                                    <div class="font-bold text-sm md:text-base">4-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(1kg)</div>
-                                    <div class="mt-1 font-bold text-green-700">$40/fn</div>
+                                    <div class="font-bold text-base">4-Variety</div>
+                                    <div class="text-sm text-gray-500">(1kg)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$40/fn</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3VZB03V57KY6PxDUrEFNg', '$40.00/fn')">
                                         Choose Plan
@@ -365,12 +409,12 @@
                         </div>
                         <div class="space-y-4">
                             <h2 class="text-xl font-bold border-b pb-2 text-center">Monthly</h2>
-                            <div class="grid grid-cols-2 md:grid-cols-1 gap-3">
+                            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-1 gap-4">
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3rlB03V57KY6Pi9IJdF8y', '$20.00/mo')">
-                                    <div class="font-bold text-sm md:text-base">1-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(250g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$20/mo</div>
+                                    <div class="font-bold text-base">1-Variety</div>
+                                    <div class="text-sm text-gray-500">(250g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$20/mo</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3rlB03V57KY6Pi9IJdF8y', '$20.00/mo')">
                                         Choose Plan
@@ -378,9 +422,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3nTB03V57KY6Phuo34Ps2', '$32.00/mo')">
-                                    <div class="font-bold text-sm md:text-base">2-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(500g)</div>
-                                    <div class="mt-1 font-bold text-green-700">$32/mo</div>
+                                    <div class="font-bold text-base">2-Variety</div>
+                                    <div class="text-sm text-gray-500">(500g)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$32/mo</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3nTB03V57KY6Phuo34Ps2', '$32.00/mo')">
                                         Choose Plan
@@ -388,9 +432,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3llB03V57KY6PuHfwaxuQ', '$40.00/mo')">
-                                    <div class="font-bold text-sm md:text-base">3-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(1kg)</div>
-                                    <div class="mt-1 font-bold text-green-700">$40/mo</div>
+                                    <div class="font-bold text-base">3-Variety</div>
+                                    <div class="text-sm text-gray-500">(1kg)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$40/mo</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3llB03V57KY6PuHfwaxuQ', '$40.00/mo')">
                                         Choose Plan
@@ -398,9 +442,9 @@
                                 </div>
                                 <div class="plan-card"
                                     onclick="selectPlan(this, 'price_1Sj3jYB03V57KY6PwCVObZmX', '$55.00/mo')">
-                                    <div class="font-bold text-sm md:text-base">4-Variety</div>
-                                    <div class="text-xs md:text-sm text-gray-500">(1.5kg)</div>
-                                    <div class="mt-1 font-bold text-green-700">$55/mo</div>
+                                    <div class="font-bold text-base">4-Variety</div>
+                                    <div class="text-sm text-gray-500">(1.5kg)</div>
+                                    <div class="mt-2 font-bold text-green-700 text-lg">$55/mo</div>
                                     <button type="button" class="plan-select-btn"
                                         onclick="event.stopPropagation(); selectPlan(this.closest('.plan-card'), 'price_1Sj3jYB03V57KY6PwCVObZmX', '$55.00/mo')">
                                         Choose Plan
@@ -605,33 +649,6 @@
         function setCart(cart) {
             localStorage.setItem(CART_KEY, JSON.stringify(cart));
         }
-
-        function addPriceToCart(priceId, qty = 1) {
-            const cart = getCart();
-            cart[priceId] = (parseInt(cart[priceId], 10) || 0) + (parseInt(qty, 10) || 0);
-            setCart(cart);
-        }
-
-        function removePriceFromCart(priceId, qty = 1) {
-            const cart = getCart();
-            const next = (parseInt(cart[priceId], 10) || 0) - (parseInt(qty, 10) || 0);
-            if (next <= 0) delete cart[priceId];
-            else cart[priceId] = next;
-            setCart(cart);
-        }
-
-        function cartItemsToStripeLineItems() {
-            const cart = getCart();
-            return Object.entries(cart)
-                .map(([price, quantity]) => ({ price, quantity: parseInt(quantity, 10) || 0 }))
-                .filter(x => x.quantity > 0);
-        }
-
-        function cartCount() {
-            const cart = getCart();
-            return Object.values(cart).reduce((sum, n) => sum + (parseInt(n, 10) || 0), 0);
-        }
-
 
         function validateCheckout() {
             const btn = document.getElementById('checkout-btn');
